Closed Bug 660439 Opened 14 years ago Closed 14 years ago

nsEudoraEditor.cpp error: no 'nsresult nsEudoraHTMLImageElement::GetX(PRInt32*)' member function declared in class 'nsEudoraHTMLImageElement'

Categories

(MailNews Core :: Import, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 7.0

People

(Reporter: Nomis101, Assigned: standard8)

References

Details

Trunk builds are burning since Bug 587021 because of: ../../../../../../mailnews/import/eudora/src/nsEudoraEditor.cpp:1353: error: no 'nsresult nsEudoraHTMLImageElement::GetX(PRInt32*)' member function declared in class 'nsEudoraHTMLImageElement' ../../../../../../mailnews/import/eudora/src/nsEudoraEditor.cpp:1358: error: no 'nsresult nsEudoraHTMLImageElement::GetY(PRInt32*)' member function declared in class 'nsEudoraHTMLImageElement' NEXT ERROR make[8]: *** [nsEudoraEditor.o] Error 1 make[7]: *** [eudora/src_libs] Error 2 make[6]: *** [import_libs] Error 2 make[6]: *** Waiting for unfinished jobs....
Thanks, I've just pushed a bustage fix to remove those functions that are no longer required: http://hg.mozilla.org/comm-central/rev/957b62145ea2
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Pushed an additional fix for Windows: http://hg.mozilla.org/comm-central/rev/63fecd11f21a
Assignee: nobody → mbanner
Flags: in-testsuite-
Target Milestone: --- → Thunderbird 7.0
You need to log in before you can comment on or make changes to this bug.