Bug 660439 fix build bustage on Mac and Windows following bug 587021 landing in mozilla-central. r=bustage-fix